test/corpus/03-functions.txt
================================================================================
Function prototype
================================================================================
func.func @abort()
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list)))))

================================================================================
Simple function using func, arith dialects
================================================================================
func.func @test_addi(%arg0 : i64, %arg1 : i64) -> i64 {
  %0 = arith.addi %arg0, %arg1 : i64
  return %0 : i64
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (integer_type)))
          (value_use)
          (type
            (builtin_type
              (integer_type))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (integer_type)))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (integer_type)))))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (integer_type)))))))))))

================================================================================
Function with multiple return values
================================================================================
func.func @count(%x: i64) -> (i64, i64) {
  return %x, %x: i64, i64
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (integer_type))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (integer_type)))
            (type
              (builtin_type
                (integer_type)))))
        (region
          (entry_block
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (value_use)
                (type
                  (builtin_type
                    (integer_type)))
                (type
                  (builtin_type
                    (integer_type)))))))))))

================================================================================
Variadic function
================================================================================
llvm.func @variadic(...)
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (variadic))))))

================================================================================
Variadic function with other arguments
================================================================================
llvm.func @variadic_args(i32, i32, ...)
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (type
            (builtin_type
              (integer_type)))
          (type
            (builtin_type
              (integer_type)))
          (variadic))))))

================================================================================
Variadic marker inside argument list
================================================================================
llvm.func @variadic_inside(%arg0: i32, ..., %arg1: i32)
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (integer_type)))
          (variadic)
          (value_use)
          (type
            (builtin_type
              (integer_type))))))))

================================================================================
Generic operation in a module, with attributes
================================================================================
module {
  "llvm.func"() ({
  }) {sym_name = "foo", function_type = !llvm.func<void ()>} : () -> ()
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (module_operation
        (region
          (entry_block
            (operation
              (generic_operation
                (string_literal)
                (region)
                (attribute
                  (dictionary_attribute
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (string_literal)))
                    (attribute_entry
                      (bare_id)
                      (attribute_value
                        (type
                          (dialect_type
                            (pretty_dialect_item
                              (dialect_namespace)
                              (dialect_ident)
                              (pretty_dialect_item_body
                                (bare_id)))))))))
                (function_type)))))))))

================================================================================
Generic operation with successor and region
================================================================================
func.func @terminator_with_regions() {
  "region"()[^bb2] ({}) : () -> ()
^bb2:
  return
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list)
        (region
          (entry_block
            (operation
              (generic_operation
                (string_literal)
                (successor
                  (caret_id))
                (region)
                (function_type))))
          (block
            (block_label
              (caret_id))
            (operation
              (custom_operation
                (custom_op_name)))))))))

================================================================================
Generic operation region with an empty block
================================================================================
"region"() ({
^bb0(%arg0 : i32):
}) : () -> ()
--------------------------------------------------------------------------------

(toplevel
  (operation
    (generic_operation
      (string_literal)
      (region
        (block
          (block_label
            (caret_id)
            (block_arg_list
              (value_use)
              (type
                (builtin_type
                  (integer_type)))))))
      (function_type))))

================================================================================
Function with private specifier, and func.call
================================================================================
func.func private @source() -> tensor<f32>
func.func @call_source() -> tensor<f32> {
  %0 = call @source() : () -> tensor<f32>
  return %0 : tensor<f32>
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list)
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (tensor_type
                  (dim_list
                    (type
                      (builtin_type
                        (float_type))))))))))))
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list)
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (tensor_type
                  (dim_list
                    (type
                      (builtin_type
                        (float_type)))))))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (symbol_ref_id)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (tensor_type
                      (dim_list
                        (type
                          (builtin_type
                            (float_type)))))))))))))))

================================================================================
Module with name
================================================================================
module @addmodule {
  func.func @test_addi(%arg0 : i64, %arg1 : i64) -> i64 {
    %0 = arith.addi %arg0, %arg1 : i64
    return %0 : i64
  }
}

--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (module_operation
        (symbol_ref_id)
        (region
          (entry_block
            (operation
              (custom_operation
                (func_operation
                  (symbol_ref_id)
                  (func_arg_list
                    (value_use)
                    (type
                      (builtin_type
                        (integer_type)))
                    (value_use)
                    (type
                      (builtin_type
                        (integer_type))))
                  (func_return
                    (type_list_attr_parens
                      (type
                        (builtin_type
                          (integer_type)))))
                  (region
                    (entry_block
                      (operation
                        (op_result
                          (value_use))
                        (custom_operation
                          (custom_op_name)
                          (value_use)
                          (value_use)
                          (type
                            (builtin_type
                              (integer_type)))))
                      (operation
                        (custom_operation
                          (custom_op_name)
                          (value_use)
                          (type
                            (builtin_type
                              (integer_type))))))))))))))))

================================================================================
LLVM function with linkage specifier
================================================================================
llvm.func internal @internal_func()
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (function_specifier)
        (symbol_ref_id)
        (func_arg_list)))))

================================================================================
LLVM function with linkage and calling convention
================================================================================
llvm.func internal fastcc @callee() -> i32
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (function_specifier)
        (function_specifier)
        (symbol_ref_id)
        (func_arg_list)
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (integer_type)))))))))

================================================================================
LLVM function with linkage and LLVM visibility
================================================================================
llvm.func private hidden @callee()
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (function_specifier)
        (function_specifier)
        (symbol_ref_id)
        (func_arg_list)))))

================================================================================
LLVM function with unnamed_addr specifier
================================================================================
llvm.func local_unnamed_addr @testfn(i32)
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (function_specifier)
        (symbol_ref_id)
        (func_arg_list
          (type
            (builtin_type
              (integer_type))))))))

================================================================================
LLVM function with vscale_range clause
================================================================================
llvm.func @vscale_roundtrip() vscale_range(1, 2)
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list)
        (vscale_range
          (integer_literal)
          (integer_literal))))))

================================================================================
LLVM function with comdat selector
================================================================================
llvm.func @any() comdat(@__llvm_comdat::@any)
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list)
        (comdat
          (symbol_ref_id
            (symbol_ref_id)))))))

================================================================================
LLVM function with vscale_range and comdat clauses
================================================================================
llvm.func @both() vscale_range(1, 2) comdat(@c::@k)
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list)
        (vscale_range
          (integer_literal)
          (integer_literal))
        (comdat
          (symbol_ref_id
            (symbol_ref_id)))))))

================================================================================
Function with nested symbol visibility
================================================================================
func.func nested @fold() -> i32
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list)
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (integer_type)))))))))
