test/corpus/04-affine.txt
================================================================================
affine_map with indexing and sum
================================================================================
#inline_map_minmax_loop2 = affine_map<()[s0] -> (100, s0 + 1)>
#map0 = affine_map<(i) -> ()>
#bound_map1 = affine_map<(i, j)[s] -> (i + j + s)>
--------------------------------------------------------------------------------

(toplevel
  (attribute_alias_def
    (attribute_value
      (builtin_attribute
        (affine_map
          (bare_id)
          (integer_literal)
          (bare_id)
          (integer_literal)))))
  (attribute_alias_def
    (attribute_value
      (builtin_attribute
        (affine_map
          (bare_id)))))
  (attribute_alias_def
    (attribute_value
      (builtin_attribute
        (affine_map
          (bare_id)
          (bare_id)
          (bare_id)
          (bare_id)
          (bare_id)
          (bare_id))))))

================================================================================
affine_set expression
================================================================================
#set0 = affine_set<(i)[N, M] : (i >= 0, -i + N >= 0, N - 5 == 0, -i + M + 1 >= 0)>
--------------------------------------------------------------------------------

(toplevel
  (attribute_alias_def
    (attribute_value
      (builtin_attribute
        (affine_set
          (bare_id)
          (bare_id)
          (bare_id)
          (bare_id)
          (integer_literal)
          (bare_id)
          (bare_id)
          (integer_literal)
          (bare_id)
          (integer_literal)
          (integer_literal)
          (bare_id)
          (bare_id)
          (integer_literal)
          (integer_literal))))))

================================================================================
affine.min and affine.max with non-trivial affine maps
================================================================================
func.func @affine_min(%arg0 : index, %arg1 : index, %arg2 : index) {
  %0 = affine.min affine_map<(d0)[s0] -> (1000, d0 + 512, s0)> (%arg0)[%arg1]
  %1 = affine.min affine_map<(d0, d1)[s0] -> (d0 - d1, s0 + 512)> (%arg0, %arg1)[%arg2]
  %2 = affine.min affine_map<()[s0, s1] -> (s0 - s1, 11)> ()[%arg1, %arg2]
  %3 = affine.min affine_map<()[] -> (77, 78, 79)> ()[]
  return
}

func.func @affine_max(%arg0 : index, %arg1 : index, %arg2 : index) {
  %0 = affine.max affine_map<(d0)[s0] -> (1000, d0 + 512, s0)> (%arg0)[%arg1]
  %1 = affine.max affine_map<(d0, d1)[s0] -> (d0 - d1, s0 + 512)> (%arg0, %arg1)[%arg2]
  %2 = affine.max affine_map<()[s0, s1] -> (s0 - s1, 11)> ()[%arg1, %arg2]
  %3 = affine.max affine_map<()[] -> (77, 78, 79)> ()[]
  return
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (index_type)))
          (value_use)
          (type
            (builtin_type
              (index_type)))
          (value_use)
          (type
            (builtin_type
              (index_type))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (bare_id)
                      (bare_id)
                      (integer_literal)
                      (bare_id)
                      (integer_literal)
                      (bare_id))))
                (value_use)
                (value_use)))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (integer_literal))))
                (value_use)
                (value_use)
                (value_use)))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (integer_literal))))
                (value_use)
                (value_use)))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (integer_literal)
                      (integer_literal)
                      (integer_literal))))))
            (operation
              (custom_operation
                (custom_op_name))))))))
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (index_type)))
          (value_use)
          (type
            (builtin_type
              (index_type)))
          (value_use)
          (type
            (builtin_type
              (index_type))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (bare_id)
                      (bare_id)
                      (integer_literal)
                      (bare_id)
                      (integer_literal)
                      (bare_id))))
                (value_use)
                (value_use)))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (integer_literal))))
                (value_use)
                (value_use)
                (value_use)))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (integer_literal))))
                (value_use)
                (value_use)))
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (integer_literal)
                      (integer_literal)
                      (integer_literal))))))
            (operation
              (custom_operation
                (custom_op_name)))))))))

================================================================================
affine_map with complex affine expression
================================================================================
func.func @semiaffine_mod(%arg0: index, %arg1: index) -> index {
  %a = affine.apply affine_map<(d0)[s0] ->((-((d0 floordiv s0) * s0) + s0 * s0) mod s0)> (%arg0)[%arg1]
  return %a : index
}

func.func @semiaffine_floordiv(%arg0: index, %arg1: index) -> index {
  %a = affine.apply affine_map<(d0)[s0] ->((-((d0 floordiv s0) * s0) + ((2 * s0) mod (3 * s0))) floordiv s0)> (%arg0)[%arg1]
  return %a : index
}
--------------------------------------------------------------------------------

(toplevel
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (index_type)))
          (value_use)
          (type
            (builtin_type
              (index_type))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (index_type)))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id))))
                (value_use)
                (value_use)))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (index_type))))))))))
  (operation
    (custom_operation
      (func_operation
        (symbol_ref_id)
        (func_arg_list
          (value_use)
          (type
            (builtin_type
              (index_type)))
          (value_use)
          (type
            (builtin_type
              (index_type))))
        (func_return
          (type_list_attr_parens
            (type
              (builtin_type
                (index_type)))))
        (region
          (entry_block
            (operation
              (op_result
                (value_use))
              (custom_operation
                (custom_op_name)
                (attribute
                  (builtin_attribute
                    (affine_map
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (bare_id)
                      (integer_literal)
                      (bare_id)
                      (integer_literal)
                      (bare_id)
                      (bare_id))))
                (value_use)
                (value_use)))
            (operation
              (custom_operation
                (custom_op_name)
                (value_use)
                (type
                  (builtin_type
                    (index_type)))))))))))
